apps/prod/microk8s/www.w-influencers.com/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-redirect
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: "https://www.w-influencers.com"
spec:
  rules:
  - host: w-influencers.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - www.w-influencers.com
    secretName: https-secret
  rules:
  - host: www.w-influencers.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-service
            port:
              number: 80
